<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="30dp"
    android:orientation="vertical"
    tools:context="com.example.loginsignupforms.Register_user">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registro_usuario"
        android:textSize="24sp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/colorAccent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name_hint"
            android:ems="10"
            android:inputType="text"
            android:textSize="20sp"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:ems="10"
            android:inputType="text"
            android:textSize="20sp"/>/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:ems="10"
            android:inputType="text"
            android:textSize="20sp"/>/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:ems="10"
            android:textSize="20sp"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint2"
            android:inputType="textPassword"
            android:ems="10"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/role_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:entries="@array/roles_array"
        />


    <TextView
        android:id="@+id/location_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Localización actual"
        android:textSize="20sp"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/location_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Obtener Localización"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/location_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Coordenadas: (pendiente)"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/date_of_birth_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Fecha de Nacimiento"
        android:textSize="20sp"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/date_of_birth_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Seleccionar Fecha de Nacimiento"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/date_of_birth_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Fecha de nacimiento: (pendiente)"
        android:textSize="16sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Gender: "
        android:textSize="20sp"
        android:layout_marginTop="10dp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="Male"
            android:textSize="20sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="Female"
            android:textSize="20sp" />
    </RadioGroup>


    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="22sp"
        android:textColor="#FFFFFF"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/colorAccent"
        android:text="Register" />

    </LinearLayout>

</ScrollView>



